[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "titan-ai"
version = "0.1.0"
authors = [
  { name="Shivay", email="shivay@example.com" },
]
description = "TITAN: Trillion-scale Intelligent Training Architecture for Networks"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "lz4>=4.3.2",
    "zstandard>=0.21.0",
]

[project.urls]
"Homepage" = "https://github.com/Shivay00001/ai-nexus-pro"
"Bug Tracker" = "https://github.com/Shivay00001/ai-nexus-pro/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["titan*"]
